--- a/themes/casper/source/css/screen.css
+++ b/themes/casper/source/css/screen.css
@@ -416,8 +416,8 @@ margin on the iframe, cause it breaks stuff. */
     width:80%;
     max-width: 700px;
     margin: 4rem auto;
-    padding-bottom: 4rem;
-    border-bottom: #EBF2F6 1px solid;
+    /*padding-bottom: 4rem;*/
+    /*border-bottom: #EBF2F6 1px solid;*/
     word-break: break-word;
     hyphens: auto;
 }
@@ -859,7 +859,7 @@ pre .chunk {
 
 .site-footer {
     position: relative;
-    margin: 8rem 0 0 0;
+    /*margin: 8rem 0 0 0;*/
     padding: 4rem 0;
     border-top: #EBF2F6 1px solid;
     font-family: 'Open Sans', sans-serif;
