--- a/themes/casper/source/css/screen.css
+++ b/themes/casper/source/css/screen.css
@@ -91,7 +91,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: 'Noto Serif', serif;
+    font-family: "consolas", "微软雅黑", "Microsoft YaHei", "Noto Sans", "Helvetica", "Noto Serif", serif;
     font-size: 2.0rem;
     line-height: 1.6em;
     color: #3A4145;
@@ -114,7 +114,7 @@ h4, h5, h6 {
     text-rendering: optimizeLegibility;
     line-height: 1;
     margin-top: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Microsoft YaHei", "微软雅黑", 'Open Sans', sans-serif;
 }
 
 h1 {
@@ -132,19 +132,19 @@ h2 {
 }
 
 h3 {
-    font-size: 3.5rem;
-}
-
-h4 {
-    font-size: 3rem;
-}
-
-h5 {
     font-size: 2.5rem;
 }
 
-h6 {
+h4 {
     font-size: 2rem;
+}
+
+h5 {
+    font-size: 0.5rem;
+}
+
+h6 {
+    font-size: 0.3rem;
 }
 
 a {
@@ -231,7 +231,7 @@ mark {
 
 code, tt {
     padding: 1px 3px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
     font-size: 0.85em;
     white-space: pre-wrap;
     border: 1px solid #E3EDF3;
@@ -246,7 +246,7 @@ pre {
     border: 1px solid #E3EDF3;
     width: 100%;
     padding: 10px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
@@ -255,7 +255,7 @@ pre {
 }
 
 pre code, tt {
-    font-size: inherit;
+    font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
     white-space: -moz-pre-wrap;
     white-space: pre-wrap;
     background: transparent;
@@ -414,7 +414,7 @@ margin on the iframe, cause it breaks stuff. */
 .post {
     position: relative;
     width:80%;
-    max-width: 700px;
+    max-width: 1200px;
     margin: 4rem auto;
     /*padding-bottom: 4rem;*/
     /*border-bottom: #EBF2F6 1px solid;*/
@@ -663,7 +663,7 @@ figure.highlight table > tbody > tr > td {
     background: #fff !important;
 }
 figure.highlight table > tbody > tr > td.gutter {
-    max-width: 40px;
+    width: 40px;
     text-align: right;
 }
 figure.highlight pre {
